# tendon-arm

./: .gitignore  README.md
firmware/: all.sh  build.sh  flash.sh
firmware/jorca/: .mxproject  CMakeLists.txt  jorca.ioc
firmware/jorca/App/Inc/: app.h  stepper.h
firmware/jorca/App/Src/: app.c  stepper.c
firmware/jorca/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
firmware/jorca/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
firmware/jorca/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
firmware/jorca/cmake/stm32cubemx/: CMakeLists.txt
firmware/jorcaf4/: .mxproject  CMakeLists.txt  jorcaf4.ioc  stm32f401retx_flash.ld
firmware/jorcaf4/App/Inc/: app.h  stepper.h
firmware/jorcaf4/App/Src/: app.c  stepper.c
firmware/jorcaf4/Core/Inc/: main.h  stm32f4xx_it.h
firmware/jorcaf4/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/jorcaf4/cmake/stm32cubemx/: CMakeLists.txt
software/: knobs.py  serial_manager.py  sweep.py  test.py
